--- a/L-1-T-1-Porfolio/index.html
+++ b/L-1-T-1-Porfolio/index.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="header">
+    <div class="name">Chakradhar Kalla</div>
+    <div class="links">
+      <div class="link-item"><a href="#about">About</a></div>
+      <div class="link-item"><a href="#skills">Skills</a></div>
+      <div class="link-item"><a href="#projects">Projects</a></div>
+      <div class="link-item"><a href="#contact">Contact</a></div>
+    </div>
+    <div class="menu">
+      <div class="main-item parent">
+        <span class="material-icons">
+          <img src="icons/icons8-hamburger-menu-30.png">
+        </span>
+        <div class="sub-menu">
+            <a class="item" href="#about">About</a>
+            <a class="item" href="#skills">Skills</a>
+            <a class="item" href="#projects">Projects</a>
+            <a class="item" href="#contacts">Contact</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
