--- a/L-1-T-1-Porfolio/index.html
+++ b/L-1-T-1-Porfolio/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+  <!-- Header -->
   <div class="header">
     <div class="name">Chakradhar Kalla</div>
     <div class="links">
@@ -29,5 +31,20 @@
       </div>
     </div>
   </div>
+  <!-- End of header -->
+
+  <!-- overview -->
+  <section id="profile">
+    <div class="profile">
+      <div class="profile-pic-container">
+        <img class="profile-pic" src="icons/me-1.png">
+      </div>
+      <div class="profile-description">
+        <div>Hello I'm</div>
+        <div><h1>Chakradhar Kalla</h1></div>
+        <div>Frontend Developer</div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
